...
    "days": "{{unit}} days",
    "week": "{{unit}} week",
    "weeks": "{{unit}} weeks"
  },
  "dogProfile": {
    "profileInfoError": "⚠️ Loading Error. Try again later.",
    "cancel": "Cancel",
    "dogProfile": "Dog Profile",
    "nextPhoto": "Next photo of {{name}}",
    "openProfile": "Open {{name}}'s profile",
    "previousPhoto": "Previous photo of {{name}}",
    "report": "Report",
    "reportBody": "I would like to report account number {{id}}, owned by {{name}} for:\n",
...
    "color": "Color",
    "dogName": "Name",
    "dogNamePlaceholder": "How can we call your dog?",
    "female": "Female",
    "gender": "Gender",
    "male": "Male",
    "profileError": "Unable to save profile information",
    "profileUpdated": "Your profile has been updated!",
    "saveProfile": "Save Profile",
    "size": "Size",
    "title": "Edit profile",
    "weight": "Weight (kg)"
  },
...
    "insertEmail": "Insert your <1>email</1>",
    "loginError": "An error occurred while logging in.",
    "validEmail": "Please enter a valid email"
  },
  "locationMap": {
    "adjustYourPosition": "Adjust your position",
    "areYouHere": "Are you here?",
    "confirmLocation": "Confirm Location",
    "title": "Where are you?",
    "updateLocationError": "An error occurred while updating your location."
  },
  "match": {
    "itsAMatch": "It's a match!",
    "itsAMatchDescription": "You matched with this dog!"
...
