...
            name="name"
            control={control}
            rules={{ required: true }}
            render={({ field: { onChange, onBlur, value }, fieldState }) => {
              return (
                <Input
                  testID="edit-profile-name"
                  title={t("editProfile.dogName")}
                  placeholder={t("editProfile.dogNamePlaceholder")}
                  value={value}
                  onChangeText={onChange}
                  onBlur={onBlur}
                  maxLength={50}
...
              />
            )}
          />
        </Container>
        <BottomAction.Container>
          <Button
            testID="edit-profile-save"
            loading={myDogUpdateMutation.isPending}
            onPress={() => saveUser()}
          >
            {t("editProfile.saveProfile")}
          </Button>
        </BottomAction.Container>
...
