...
    left: 10,
  };

  const theme = useTheme();

  return (
    <Container testID="location-map-screen">
      <MapView
        ref={mapRef}
        showsUserLocation
        legalLabelInsets={legalLabelInsets}
        mapPadding={mapPadding}
        // Android doesn't switch maps to dark mode like IOS does,
...
